--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="assets/font-awesome/css/all.min.css">
+  <link rel="stylesheet" href="assets/font-awesome/css/all.min.css">
 
       <link rel="stylesheet" href="assets/css/plugins/bootstrap-grid.css">
       <!-- font awesome css -->
